# free-sitemap-generator

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DriverUpdaterLog.txt  LICENSE  README.md  main.py  possible-roadmap.md  pyproject.toml  requirements.txt  setup.py  site_map_generator.py  site_map_generator.spec  test_main.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-automerge.yml
.retired/: AUDIT_REPORT.md  test_main.py
sitemap_generator/: __init__.py  crawler.py  exporter.py  gui.py
