[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-sitemap-generator"
version = "2.0.0"
description = "A PyQt6 desktop application for crawling websites and generating sitemaps"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["sitemap", "crawler", "seo", "web-scraping", "pyqt6"]
authors = [
    {name = "JTGSYSTEMS", email = "contact@jtgsystems.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyQt6>=6.10.1,<7.0.0",
    "requests>=2.32.5,<3.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "lxml>=6.0.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-qt>=4.4.0,<5.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "PyInstaller>=6.17.0,<7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "black>=24.10.0",
]

[project.urls]
Homepage = "https://github.com/jtgsystems/free-sitemap-generator"
Repository = "https://github.com/jtgsystems/free-sitemap-generator"
Issues = "https://github.com/jtgsystems/free-sitemap-generator/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # use of assert (okay in tests)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "S105", "S106"]
"setup.py" = ["S603", "S607"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false  # Too strict for PyQt6
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "PyQt6.*",
    "bs4",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    ".",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
