[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-sitemap-generator"
version = "3.0.0"
description = "Professional-grade sitemap generator with async crawling and XML export"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "JTGSYSTEMS", email = "info@jtgsystems.com"}
]
keywords = ["sitemap", "seo", "crawler", "xml", "generator", "web"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "PyQt6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "pyinstaller>=5.13",
]

[project.urls]
Homepage = "https://github.com/jtgsystems/free-sitemap-generator"
Repository = "https://github.com/jtgsystems/free-sitemap-generator"
Issues = "https://github.com/jtgsystems/free-sitemap-generator/issues"

[project.scripts]
free-sitemap-generator = "main:main"
